styles/src/_content.scss
.page {
    width: calc(100vw - 280px);
    right: 0;
    height: 100%;
    position: absolute;
    background-color: #ffffff;
}

.page .header {
    background-color: rgb(247, 247, 247);
    padding: 12px 0;
    height: 20px;
}

.page .header h1 {
    display: inline-block;
    color: black;
    margin-left: 11px;
    font-size: 20px;
    font-weight: 400;
    vertical-align: text-bottom;
}

.page .header span {
    color: black;
    margin-left: 16px;
}

.page .messages {
    height: calc(100% - 44px - 56px - 5px);
    width: auto;
    margin: 5px 5px 0 0;
    overflow-y: scroll;
    overflow-x: hidden;
}

.page .messages div:last-of-type.message {
    margin-bottom: 14px;
}

.page .messages .message-header {
    position: relative;
    margin-top: 20px;
    animation: fadein 500ms;
}

.page .messages .message-header .profile{
    width: 40px;
    height: 40px;
    margin-left: 17px;
    position: relative;
    z-index: 2;
    background-color: white;
    float: left;
}

.page .messages .message-header .profile img {
    width: 40px;
    height: 40px;
    border-radius: 4px;
    cursor: pointer;
}

.page .messages .message em {
    font-style: italic;
}

.page .messages .message .slack-user{
    font-weight: 600;
}
.page .messages .message .slack-user:before {
    content:'@';
}

.page .messages .message code{
    white-space: normal;
    color: red;
    font-size: 12px;
    background-color: #f7f7f9;
    border: 1px solid #e1e1e8;
    padding: 0px 4px;
}

.page .messages .message codeBlock{
    line-height: 18px;
    font-size: 12px;
    background-color: #f7f7f9;
    padding: 0px 4px;
    border: 1px solid #e1e1e8;
    display: block;
}

.page .messages .message .channel_event .slack-user{
    display: none;
}

.page .messages .message .channel_event,
.page .messages .message .me_message {
    font-style: italic !important;
    color: gray !important;
}

.page .messages .message strong {
    font-weight: 600;
}
.page .messages .message .time {
    color: black;
    float: left;
    margin-left: -42px;
    font-size: 12px;
    position: relative;
    top: 2px;
    font-weight: 400;
    color: gray;
    opacity: 0;
    -webkit-transition: opacity 0.125s linear;
}

.page .messages .message .inline-image img {
    max-width: 70vw;
    max-height: 30vh;
    display: block;
    margin-top: 5px;
    position: relative;
    border-radius: 3px;
    border: 1px solid rgba(128, 128, 128, 0.38);
}

.page .messages .message .inline-image.false img {
    height: 0px;
    border: 0px solid rgba(128, 128, 128, 0.38);
}

.page .messages .message .toggle-inline {
    margin-left: 5px;
    color: rgba(128, 128, 128, 0.98);
    top: 2px;
    position: relative;
    cursor: pointer;
}

.page .messages .message .edited {
    float: right;
    font-size: 12px;
    position: relative;
    top: 2px;
    font-weight: 400;
    color: gray;
}

.page .messages .message .emoji {
    top: 4px;
    margin-top: -14px;
    height: 20px;
    position: relative;
}

.page .messages .message {
	animation: fadein 400ms;
	font-family: 'Open Sans', sans-serif;
    color: #202B33;
    padding: 4px;
    min-height: 14px;
    font-weight: 400;
    word-break: break-word;
    margin: 3px 4px 0px 65px;
    white-space: pre-wrap;
    padding-right: 10px;
    border-radius: 3px;
    font-size: 14px;
}

@-webkit-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

.page .messages .message:hover {
    background-color: rgb(240,240,240);
}

.page .messages .message:hover .time{
    opacity: 1;
}

.page .messages .message-header h1 {
    color: #202B33;
    float: left;
    font-size: 15px;
    font-weight: 500;
    margin-left: 10px;
}

.page .messages .message-header .time {
    font-size: 12px;
    color: gray;
    font-weight: 300;
    margin-left: 10px;
}

.page .chat-input {
    position: absolute;
    bottom: 0;
    height: 56px;
    width: 100%;
}

.page .chat-input .chat-inner {
    position: relative;
    width: calc(100% - 40px);
    height: calc(100% - 16px);
    margin: 0 18px 4px 14px;
    height: 40px;
}

.page .chat-input .chat-inner .textarea-input {
    z-index: 3;
    position: absolute;
    bottom: 0px;
    outline: none;
    width: 100%;
    height: 100%;
    border: 2px solid #DADADA;
    border-radius: 8px;
    padding: 9px;
    font-size: 15px;
    font-family: inherit;
    box-sizing: border-box;
    -webkit-appearance: none;
    resize: none;
    min-height: 40px;
}

